# dramas-processor

./: .gitignore  AGENTS.md  COMMANDS_USAGE_GUIDE.md  DEDUPLICATION_USAGE.md  PROJECT_STRUCTURE.md  README.md  feishu_aliases.sh  feishu_quick.sh  license.json  pyproject.toml  requirements.txt  requirements_ai.txt  run_with_caffeinate.sh
configs/: ai_config.yaml  default.yaml  lite.yaml  pro.yaml
configs/users/: xh.yaml  xl.yaml  xx.yaml
docs/: AI_SETUP_GUIDE.md  AI_SETUP_GUIDE_SIMPLIFIED.md  DATE_DEDUPLICATION_GUIDE.md  FEATURE_COMPARISON.md  FEISHU_NOTIFICATION.md  FEISHU_WATCHER.md  MIGRATION_COMPLETE.md  README.md  USAGE_MODES_GUIDE.md
examples/: date_deduplication_usage.md  date_directory_usage.md  default_directory_usage.md
history/exports/by-date/: 2025-09-03.json  2025-09-04.json  2025-09-05.json  2025-09-06.json  2025-09-07.json  2025-09-08.json  2025-09-09.json  2025-09-10.json  2025-09-11.json  2025-09-12.json  2025-09-13.json  2025-09-14.json  2025-09-15.json  2025-09-16.json  2025-09-17.json  2025-09-18.json  2025-09-19.json  2025-09-20.json  2025-09-21.json  2025-09-22.json  2025-09-23.json  2025-09-24.json  2025-09-25.json  (+19 more)
history/sessions/: 2025-09-03_00-45-37.json  2025-09-03_16-41-30.json  2025-09-03_17-59-24.json  2025-09-03_18-02-33.json  2025-09-03_18-07-29.json  2025-09-03_18-09-33.json  2025-09-03_18-10-28.json  2025-09-03_18-11-00.json  2025-09-03_18-11-52.json  2025-09-03_18-12-47.json  2025-09-03_18-20-34.json  2025-09-03_18-35-52.json  2025-09-03_18-43-08.json  2025-09-03_18-44-57.json  2025-09-03_19-41-32.json  2025-09-03_20-57-52.json  2025-09-03_21-09-32.json  2025-09-03_21-52-35.json  2025-09-03_22-41-52.json  2025-09-04_09-18-36.json  2025-09-04_10-11-18.json  2025-09-04_15-44-12.json  2025-09-04_22-14-19.json  2025-09-04_22-32-34.json  2025-09-05_13-57-13.json  2025-09-05_14-07-28.json  2025-09-05_23-53-47.json  2025-09-05_23-56-34.json  2025-09-06_10-21-00.json  2025-09-06_13-27-52.json  2025-09-06_17-15-29.json  2025-09-06_19-26-28.json  2025-09-06_21-54-51.json  2025-09-06_22-50-11.json  2025-09-07_02-10-27.json  2025-09-07_10-19-15.json  2025-09-07_14-59-35.json  2025-09-07_22-07-52.json  2025-09-07_22-36-43.json  2025-09-07_23-04-00.json  (+125 more)
history/summary/: all-time.json
lite_release/configs/: lite.yaml
scripts/: README_Arch_WSL.md  README_WSL.md  README_Windows.md  keep-show-wsl.sh  keep-show.bat  keep-show.ps1  keep-show.sh  license_tool.py  make_lite_release_wsl.sh  make_pro_release_wsl.sh  setup_ai.sh
scripts/legacy/: dramas_process.py
src/drama_processor/: __main__.py
(+535 files in other folders)
